force-app/main/default/objects/MassiveInvoiceLog__c/MassiveInvoiceLog__c.object-meta.xml
<CustomObject>
    <label>Log Caricamento Massivo Fatture</label>
    <nameField>
        <displayFormat>MIL-{000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Caricamenti Massivi Fatture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>