force-app/main/default/objects/MassiveInvoiceLog__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>