force-app/main/default/objects/MassiveInvoiceLog__c/fields/Errori__c.field-meta.xml
<CustomField>
    <fullName>Errori__c</fullName>
    <label>Errori</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>