force-app/main/default/objects/MassiveInvoiceLog__c/fields/Numero_Fatture__c.field-meta.xml
<CustomField>
    <fullName>Numero_Fatture__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Numero Fatture</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>