force-app/main/default/objects/MassiveInvoiceLog__c/fields/Utente__c.field-meta.xml
<CustomField>
    <fullName>Utente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utente</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Log Caricamenti Massivi</relationshipLabel>
    <relationshipName>Massive_Invoice_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>