force-app/main/default/objects/MassiveInvoiceLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data__c</columns>
    <columns>Utente__c</columns>
    <columns>Numero_Fatture__c</columns>
    <columns>Numero_Visite__c</columns>
    <columns>Errori__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>